--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="/assets/css/home.css">
     <title>Contador</title>
 </head>
 <body>
@@ -21,6 +21,6 @@
         
     </main>
     
-    <script href="js/script.js"></script>
+    <script href="assets/js/script.js"></script>
 </body>
 </html>
